# feistelizer

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build
src/: basic_derive.cpp  basic_hash.cpp  benchmark.cpp  feistelizer.cpp
src/derive/: variants.h
src/hash/: functions.cpp
src/hashes/: ciphers.h  hashes.h
src/util/: byte_v.h
